tests/interpreter/pass/007-large.hyg
assert( 4 > 2);
assert( 4.0f > 2.0f)